    [[.pdata.frame).
  * is.pseries: added function to check if an object qualifies as a pseries.
  * (internal) is.index, has.index: new non-exported functions to check if an
    object is or has a proper index (in the sense of the plm package).
  * pdata.frame: fixed bug so that pdata.frames with only one column can be 
    created if drop.index = TRUE is set.
  * pvar: added method for pseries.
  * pmodel.response, fitted.plm, residuals.plm: for "between" and "fd" models, 
    a pure numeric is returned, not an 'illegal' pseries anymore (these models 
    compress data where having an index/pseries is useless and misleading).
  * pvcm object: element 'residuals' is now of class c("pseries", "numeric") 
    (were: "numeric" for within, "matrix" with one column for random model);
    element 'df.residuals' renamed to 'df.residual' (cf. lm, plm, ...).
  * print.pseries: prettier printing for c("pseries", "complex").
  * print.summary.plm: more informative for perfect fits (all residuals are 0).
  * pgrangertest: better detection of infeasibility if a series is too short.
  * plm object: gained element 'weights' if weighted estimation was performed.
  * pgmm object: removed element 'df.residual' for now as it contained the
    function of the same name rather than a number.
  * plm/ercomp: informative error messages for non-estimable 'swar' and 'amemiya'
    models when between model lacks observations ('swar') and individual or
    time dimension lacks within variation ('amemiya').
  * plm/model.matrix.pFormula: informative error message for non-finite values.
  * summary.purtest: give informative error message when run on purtest object
    containing result for Hadri's test.


Changes in version 1.6-6

  * ercomp:
      * re-written to be a more general framework.
      * (internal) returned ercomp object: component 'sigma2' is now a numeric;
        component 'theta' is now either a numeric (balanced models) or a list with 