@@ -191,7 +191,11 @@ make.pconsecutive.pdata.frame <- function(x, balanced = FALSE, ...){
 
 make.pconsecutive.pseries <- function(x, balanced = FALSE, ...) {
   is_p <- is.pconsecutive(x)
-  if (anyNA(is_p) || !all(is_p)) {
+  is_bal <- is.pbalanced(x)
+  make_balanced <- balanced == TRUE && !is_bal # consecutive AND balancedness requested but data not balanced 
+                                               #  -> independent of the consecutiveness, we need to treat the balancedness
+  
+  if (anyNA(is_p) || !all(is_p) || make_balanced) {
     
     list_ret_make_index <- make.pconsecutive.indexes(x, balanced = balanced, ...)
     df_index_filled    <- list_ret_make_index[["consec_index"]]
