@@ -32,6 +32,8 @@ Changes in version 1.7-0
     object is or has a proper index (in the sense of the plm package).
   * pdata.frame: fixed bug so that pdata.frames with only one column can be 
     created if drop.index = TRUE is set.
+  * make.pconsecutive for pseries: for inputted consecutive pseries, the argument
+    'balanced' was not respected.
   * pvar: added method for pseries.
   * pmodel.response, fitted.plm, residuals.plm: for "between" and "fd" models, 
     a pure numeric is returned, not an 'illegal' pseries anymore (these models 
@@ -51,6 +53,8 @@ Changes in version 1.7-0
   * plm/model.matrix.pFormula: informative error message for non-finite values.
   * summary.purtest: give informative error message when run on purtest object
     containing result for Hadri's test.
+  * make.pconsecutive for pseries: for inputted consecutive pseries, the argument
+    balanced was not respected.
 
 
 Changes in version 1.6-6
